feat: 跨模块 访问资源